<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TeamUp</string>

    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="drawer_deadlines">Your Deadlines</string>
    <string name="drawer_groups">Your Groups</string>
    <string name="drawer_qr_code">Your QR Code</string>

    <string name="action_add_group">Add Group</string>
    <string name="action_add_milestone">Add Milestone</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_ok">OK</string>
    <string name="action_save">Save</string>
    <string name="action_scan">Scan</string>
    <string name="action_send">SEND</string>
    <string name="action_settings">Settings</string>
    <string name="action_show_group_member">Members</string>
    <string name="action_show_group_milestones">Milestones</string>

    <string name="title_activity_add_new_group">Add New Group</string>
    <string name="title_activity_chatroom">Chat</string>
    <string name="title_activity_grid_view">Select an image</string>
    <string name="title_activity_view_group_milestones">View Group Milestones</string>
    <string name="title_dialog_error">Error</string>

    <string name="image_group_icon" translatable="false">Group Icon</string>
    <string name="image_qr_code" translatable="false">QR Code</string>

    <string name="label_add_participants">Add Participants</string>
    <string name="label_new_group">Enter Group Name</string>
    <string name="label_milestone_title">Title</string>
    <string name="label_milestone_description">Description</string>
    <string name="label_milestone_datetime">Date &amp; Time</string>
    <string name="label_milestone_date">DD/MM/YYYY</string>
    <string name="label_milestone_time">HH:MM</string>
    <string name="label_milestone_week">Week</string>
    <string name="label_milestone_location">Location</string>
    <string name="label_self_destruction_date">Self Destruction Date</string>
    <string name="label_type_your_message_here">Type your message here...</string>
    <string-array name="schoolsPic">
        <item>@drawable/pic10</item>
        <item>@drawable/pic11</item>
        <item>@drawable/pic12</item>
        <item>@drawable/pic13</item>
        <item>@drawable/pic14</item>
        <item>@drawable/pic16</item>
    </string-array>
    <string name="hello_world">Hello world!</string>
</resources>
