<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:id="@+id/add_milestone"
    tools:context="mpt.is416.com.teamup.DialogFragmentAddNewMilestone">

    <TextView
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_milestone_title"
        android:id="@+id/textView1" />

    <EditText
        android:id="@+id/new_milestone_title"
        android:hint="@string/label_milestone_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/new_milestone_title"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/label_milestone_description"
        android:id="@+id/textView2" />

    <EditText
        android:id="@+id/new_milestone_description"
        android:hint="@string/label_milestone_description"
        android:inputType="textMultiLine"
        android:lines="6"
        android:gravity="top|left"
        android:scrollbars="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/new_milestone_description"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/label_milestone_datetime"
        android:id="@+id/textView3" />
    <!-- use datepicker and timepicker -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/layout1">

        <EditText
            android:id="@+id/new_milestone_date"
            android:hint="@string/label_milestone_date"
            android:layout_gravity="start"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/new_milestone_time"
            android:hint="@string/label_milestone_time"
            android:layout_gravity="end"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/label_milestone_week"
        android:id="@+id/textView4" />

    <EditText
        android:id="@+id/new_milestone_week"
        android:hint="@string/label_milestone_week"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/new_milestone_week"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/label_milestone_location"
        android:id="@+id/textView5" />

    <EditText
        android:id="@+id/new_milestone_location"
        android:hint="@string/label_milestone_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView5"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
</RelativeLayout>
